تعديل الإدغام في حالة الثلاثي المجرد