@@ -166,30 +166,30 @@ public class SarfServiceTriImpl extends SarfServiceImpl implements SarfServiceTr
     }
 
     private List<String> retrieveJussivePresent(AugmentedTrilateralRoot augmentedRoot, int formula, boolean active, boolean applyVocalization) throws Exception {
-        var ungeminated = this.trilateralAugmentedBridge.retrieveJussivePresent(augmentedRoot, formula, active, applyVocalization, false).stream().map(WordPresenter::toString);
+        var ungeminated = this.trilateralAugmentedBridge.retrieveJussivePresent(augmentedRoot, formula, active, applyVocalization, false).stream().map(WordPresenter::toString).toList();
         if(augmentedRoot.getC2() != augmentedRoot.getC3()) {
-            return ungeminated.toList();
+            return ungeminated;
         }
-        var geminated = this.trilateralAugmentedBridge.retrieveJussivePresent(augmentedRoot, formula, active, applyVocalization, true).stream().map(WordPresenter::toString);
-        return zipGeminatedAndUngeminated(ungeminated.toList(), geminated.toList(), true);
+        var geminated = this.trilateralAugmentedBridge.retrieveJussivePresent(augmentedRoot, formula, active, applyVocalization, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, true);
     }
 
     private List<String> retrieveImperative(AugmentedTrilateralRoot augmentedRoot, int formula, boolean applyVocalization) throws Exception {
-        var ungeminated = this.trilateralAugmentedBridge.retrieveImperative(augmentedRoot, formula, applyVocalization, false).stream().map(WordPresenter::toString);
+        var ungeminated = this.trilateralAugmentedBridge.retrieveImperative(augmentedRoot, formula, applyVocalization, false).stream().map(WordPresenter::toString).toList();
         if(augmentedRoot.getC2() != augmentedRoot.getC3()) {
-            return ungeminated.toList();
+            return ungeminated;
         }
-        var geminated = this.trilateralAugmentedBridge.retrieveImperative(augmentedRoot, formula, applyVocalization, true).stream().map(WordPresenter::toString);
-        return zipGeminatedAndUngeminated(ungeminated.toList(), geminated.toList(), false);
+        var geminated = this.trilateralAugmentedBridge.retrieveImperative(augmentedRoot, formula, applyVocalization, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, false);
     }
 
     private List<String> retrieveEmphasizedImperative(AugmentedTrilateralRoot augmentedRoot, int formula, boolean applyVocalization) throws Exception {
-        var ungeminated = this.trilateralAugmentedBridge.retrieveEmphasizedImperative(augmentedRoot, formula, applyVocalization, false).stream().map(WordPresenter::toString);
+        var ungeminated = this.trilateralAugmentedBridge.retrieveEmphasizedImperative(augmentedRoot, formula, applyVocalization, false).stream().map(WordPresenter::toString).toList();
         if(augmentedRoot.getC2() != augmentedRoot.getC3()) {
-            return ungeminated.toList();
+            return ungeminated;
         }
-        var geminated = this.trilateralAugmentedBridge.retrieveEmphasizedImperative(augmentedRoot, formula, applyVocalization, true).stream().map(WordPresenter::toString);
-        return zipGeminatedAndUngeminated(ungeminated.toList(), geminated.toList(), false);
+        var geminated = this.trilateralAugmentedBridge.retrieveEmphasizedImperative(augmentedRoot, formula, applyVocalization, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, false);
     }
 
     private List<String> zipGeminatedAndUngeminated(List<String> ungeminated, List<String> geminated, boolean isJussive) {
@@ -216,13 +216,13 @@ public class SarfServiceTriImpl extends SarfServiceImpl implements SarfServiceTr
         var past = this.trilateralUnaugmentedBridge.retrievePastConjugations(root, kov, active).stream().map(WordPresenter::toString).toList();
         var nominativePresent = this.trilateralUnaugmentedBridge.retrieveNominativePresent(root, kov, active).stream().map(WordPresenter::toString).toList();
         var accusativePresent = this.trilateralUnaugmentedBridge.retrieveAccusativePresent(root, kov, active).stream().map(WordPresenter::toString).toList();
-        var jussivePresent = this.trilateralUnaugmentedBridge.retrieveJussivePresent(root, kov, active).stream().map(WordPresenter::toString).toList();
+        var jussivePresent = retrieveJussivePresent(root, kov, active);
         var emphasizedPresent = this.trilateralUnaugmentedBridge.retrieveEmphasizedPresent(root, kov, active).stream().map(WordPresenter::toString).toList();
-        var imperative = Arrays.asList("");
-        var emphasizedImperative = Arrays.asList("");
+        var imperative = List.of("");
+        var emphasizedImperative = List.of("");
         if(active) {
-            imperative = this.trilateralUnaugmentedBridge.retrieveImperative(root, kov).stream().map(wp -> wp.toString()).toList();
-            emphasizedImperative = this.trilateralUnaugmentedBridge.retrieveEmphasizedImperative(root, kov).stream().map(wp -> wp.toString()).toList();
+            imperative = retrieveImperative(root, kov);
+            emphasizedImperative = retrieveEmphasizedImperative(root, kov);
         }
         var verbConjugations = new VerbConjugations();
         verbConjugations.setPast(past);
@@ -233,6 +233,33 @@ public class SarfServiceTriImpl extends SarfServiceImpl implements SarfServiceTr
         verbConjugations.setImperative(imperative);
         verbConjugations.setEmphasizedImperative(emphasizedImperative);
         return verbConjugations;
+    }
+
+    private List<String> retrieveJussivePresent(UnaugmentedTrilateralRoot root, KindOfVerb kov, boolean active) {
+        var ungeminated = this.trilateralUnaugmentedBridge.retrieveJussivePresent(root, kov, active, false ).stream().map(WordPresenter::toString).toList();
+        if(root.getC2() != root.getC3()) {
+            return ungeminated;
+        }
+        var geminated = this.trilateralUnaugmentedBridge.retrieveJussivePresent(root, kov, active, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, true);
+    }
+
+    private List<String> retrieveImperative(UnaugmentedTrilateralRoot root, KindOfVerb kov) {
+        var ungeminated = this.trilateralUnaugmentedBridge.retrieveImperative(root, kov, false).stream().map(WordPresenter::toString).toList();
+        if(root.getC2() != root.getC3()) {
+            return ungeminated;
+        }
+        var geminated = this.trilateralUnaugmentedBridge.retrieveImperative(root, kov, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, false);
+    }
+
+    private List<String> retrieveEmphasizedImperative(UnaugmentedTrilateralRoot root, KindOfVerb kov) {
+        var ungeminated = this.trilateralUnaugmentedBridge.retrieveEmphasizedImperative(root, kov, false).stream().map(WordPresenter::toString).toList();
+        if(root.getC2() != root.getC3()) {
+            return ungeminated;
+        }
+        var geminated = this.trilateralUnaugmentedBridge.retrieveEmphasizedImperative(root, kov, true).stream().map(WordPresenter::toString).toList();
+        return zipGeminatedAndUngeminated(ungeminated, geminated, false);
     }
 
     private String conjugateRoot(UnaugmentedTrilateralRoot root, KindOfVerb kov) {
